--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,13 +1,15 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: npm install
-  - name: Terminal 1
-    command: npm run test
-  - name: Terminal 2
-    command: npm run test
+  
+  - init: sudo apt-get update && sudo apt-get -y install postgresql && npm install
+  
+  - name: Setup DB
+    command: docker-compose up
     openMode: split-right
 
-# List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
-ports:
-  - port: 3000
-    onOpen: open-preview
+  - name: Migrate DB
+    command: sleep 5s && npx knex migrate:latest
+    
+  - name: Connect to DB
+    command: sleep 5s && psql --dbname=postgres --port=5432 --username=postgres --host=localhost
+    openMode: split-right
